acho q isso resolve

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* ================= */
 :root {
     --dark-blue: #363f5f;
     --green: #49AA26;
@@ -18,7 +17,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .container {
-    width: min(95vw, 1200px);
+    width: min(80vw, 800px);
     margin: auto;
 }
 /* Titulos ================= */
@@ -68,8 +67,8 @@ button:hover {
 }
 /* Header ================= */
 header {
-    background: #4640ab;
-    padding: 1rem 0 1rem;
+    background: #2D4A22;
+    padding: 2rem 0 10rem;
     text-align: center;
 }
 #logo {
@@ -88,87 +87,87 @@ header {
     white-space: nowrap;
     border-width: 0;
 }
-/* Carteira ================= */
+/* Balance ================= */
+#balance {
+    margin-top: -8rem;
+}
+#balance h2 {
+    color: #fff;
+    margin-top: 0;
+}
+/* Cards ================= */
+.card {
+    background: #fff;
+    padding: 1.5rem 2rem;
+    border-radius: 0.25rem;
+    margin-bottom: 2rem;
+    color: var(--dark-blue);
+}
+.card h3 {
+    font-weight: normal;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.card p {
+    font-size: 2rem;
+    line-height: 3rem;
+    margin-top: 1rem;
+}
+.card.total {
+    background: var(--green);
+    color: #fff;
 
+}
+/* Transactions ================= */
 
-
-#carteira {
+#transaction {
     display: block;
     width: 100%;
     overflow-x: auto;
 }
-#carteira table {
+#data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
     color: #969cb3;
 }
-#carteira  table tbody tr {
-    opacity: 0.7;
+#data-table tbody tr {
+    opacity: 0.7; 
+}
+#data-table tbody tr:hover {
     opacity: 1;
 }
-#carteira  table tbody tr:hover {
-    opacity: 1.5;
-}
-#carteira  table thead th {
-    background: #969cb3;
-    color: white;
+#data-table thead th {
+    background: #fff;
+    color: #969cb3;
     font-weight: normal;
-    padding: 0.3rem;
+    padding: 1rem 2rem;
     text-align: left;
 }
-#carteira  table td {
+#data-table td {
     background: #fff;
-    padding: 0.31rem;
+    padding: 1rem 2rem;
     color: #969cb3;
-    vertical-align: top;
 }
-#carteira  table td span.ativo {
-    padding: 1px 6px;
-    border: 1px solid #e8e8e8;
-    color: #525252;
-    border-radius: 5px;
-    width: 65px;
-    display: flex;
-}
-#carteira  table td span.ativo.selecionado {
-    background-color: #e92929;
-    color: white;
-}
-#carteira  table td span.alta {
-    color: var(--red);
-}
-#carteira  table td span.baixa {
-    color: var(--green)
-}
-#carteira  table td span.atualizacao {
-    display: block;
-    font-size: 0.6rem;
-    width: 5rem;
-}
-#carteira  table thead th:first-child,
-#carteira  table tbody td:first-child {
+#data-table thead th:first-child,
+#data-table tbody td:first-child {
     border-radius: 0.25rem 0 0 0.25rem;
-    width: 165px;
 }
-#carteira  table thead th:nth-child(8),
-#carteira  table tbody td:nth-child(8) {
-    width: 100px;
-}
-#carteira  table thead th:last-child,
-#carteira  table tbody td:last-child {
+#data-table thead th:last-child,
+#data-table tbody td:last-child {
     border-radius: 0 0.25rem 0.25rem 0;
-    width: 100px;
 }
-#carteira  table tbody td.description {
+#data-table tbody td.description {
     color: var(--dark-blue);
 }
-#carteira  table tbody td.income {
+#data-table tbody td.income {
     color: #12a453
 }
-#carteira  table tbody td.expense {
+#data-table tbody td.expense {
     color: #e92929
 }
-#carteira  table tbody td.date {
+#data-table tbody td.date {
     color: inherit
 }
 /* Modal ================= */
